--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,6 +61,7 @@ jobs:
             type=sha,format=long,prefix={{branch}}-,suffix=-{{date 'X'}},priority=1500,enable=${{ github.ref_type == 'branch' }}
             type=sha,format=long,prefix=
             type=ref,event=branch
+            type=ref,event=tag
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
