--- a/.github/workflows/helm-publish.yaml
+++ b/.github/workflows/helm-publish.yaml
@@ -77,4 +77,4 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Push to GHCR
-        run: helm push ${{ matrix.chart }}-*.tgz oci://ghcr.io/kollie-org/kollie/${{ matrix.chart }}
+        run: helm push ${{ matrix.chart }}-*.tgz oci://ghcr.io/kollie-org/charts
