--- a/charts/kollie/templates/service.yaml
+++ b/charts/kollie/templates/service.yaml
@@ -13,3 +13,4 @@ spec:
       name: http
   selector:
     {{- include "kollie.selectorLabels" . | nindent 4 }}
+    app.kubernetes.io/component: kollie
