--- a/charts/kollie/templates/rbac.yaml
+++ b/charts/kollie/templates/rbac.yaml
@@ -31,3 +31,29 @@ roleRef:
   kind: Role
   name: {{ include "kollie.fullname" . }}
   apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: {{ include "kollie.fullname" . }}
+  labels:
+    {{- include "kollie.labels" . | nindent 4 }}
+rules:
+  - apiGroups: ["networking.k8s.io"]
+    resources: ["ingresses"]
+    verbs: ["get", "list", "watch"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: {{ include "kollie.fullname" . }}
+  labels:
+    {{- include "kollie.labels" . | nindent 4 }}
+subjects:
+  - kind: ServiceAccount
+    name: {{ include "kollie.serviceAccountName" . }}
+    namespace: {{ .Release.Namespace }}
+roleRef:
+  kind: ClusterRole
+  name: {{ include "kollie.fullname" . }}
+  apiGroup: rbac.authorization.k8s.io
