--- a/charts/kollie/templates/deployment.yaml
+++ b/charts/kollie/templates/deployment.yaml
@@ -66,6 +66,8 @@ spec:
           env:
             - name: APPLICATION_STAGE
               value: production
+            - name: KOLLIE_NAMESPACE
+              value: {{ .Release.Namespace | quote }}
             - name: KOLLIE_APP_TEMPLATE_JSON_PATH
               value: /config/kollie/app_templates.json
             - name: KOLLIE_APP_BUNDLE_JSON_PATH
