--- a/charts/kollie/templates/rbac.yaml
+++ b/charts/kollie/templates/rbac.yaml
@@ -35,7 +35,7 @@ roleRef:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "kollie.fullname" . }}
+  name: {{ include "kollie.fullname" . }}-{{ .Release.Namespace }}
   labels:
     {{- include "kollie.labels" . | nindent 4 }}
 rules:
@@ -46,7 +46,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "kollie.fullname" . }}
+  name: {{ include "kollie.fullname" . }}-{{ .Release.Namespace }}
   labels:
     {{- include "kollie.labels" . | nindent 4 }}
 subjects:
@@ -55,5 +55,5 @@ subjects:
     namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
-  name: {{ include "kollie.fullname" . }}
+  name: {{ include "kollie.fullname" . }}-{{ .Release.Namespace }}
   apiGroup: rbac.authorization.k8s.io
